testing/tests/ui/is_defined.stderr
error: the previous template error derives from
 --> tests/ui/is_defined.rs:6:5
  |
6 |     source = r#"{% if x.y is defined %}{% endif %}"#,
  |     ^^^^^^

error: the previous template error derives from
  --> tests/ui/is_defined.rs:13:5
   |
13 |     source = r#"{% if true is defined %}{% endif %}"#,
   |     ^^^^^^

error: the previous template error derives from
  --> tests/ui/is_defined.rs:20:5
   |
20 |     source = r#"{% if true is %}{% endif %}"#,
   |     ^^^^^^

error: the previous template error derives from
  --> tests/ui/is_defined.rs:27:5
   |
27 |     source = r#"{% if x is %}{% endif %}"#,
   |     ^^^^^^

error: the previous template error derives from
  --> tests/ui/is_defined.rs:34:5
   |
34 |     source = r#"{% if x is blue %}{% endif %}"#,
   |     ^^^^^^

error: the previous template error derives from
  --> tests/ui/is_defined.rs:41:5
   |
41 |     source = r#"{% if x is blue.red %}{% endif %}"#,
   |     ^^^^^^
